crates/math-core/tests/snapshots/wiki_test__wiki142.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\left\\uparrow\\frac{a}{b}\\right\\downarrow\\; \\left\\Uparrow\\frac{a}{b}\\right\\Downarrow\\; \\left \\updownarrow \\frac{a}{b} \\right \\Updownarrow"
---
<math>
    <mrow>
        <mo>↑</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo>↓</mo>
    </mrow>
    <mspace width="0.2777778em"/>
    <mrow>
        <mo>⇑</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo>⇓</mo>
    </mrow>
    <mspace width="0.2777778em"/>
    <mrow>
        <mo>↕</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo>⇕</mo>
    </mrow>
</math>
