crates/math-core/tests/snapshots/wiki_test__wiki143.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\left [ 0,1 \\right ) \\left \\langle \\psi \\right |"
---
<math>
    <mrow>
        <mo>[</mo>
        <mn>0</mn>
        <mo>,</mo>
        <mn>1</mn>
        <mo>)</mo>
    </mrow>
    <mrow>
        <mo>⟨</mo>
        <mi>ψ</mi>
        <mo>|</mo>
    </mrow>
</math>
