crates/math-core/tests/snapshots/wiki_test__wiki144.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\left . \\frac{A}{B} \\right \\} \\to X"
---
<math>
    <mrow>
        <mo>⁣</mo>
        <mfrac>
            <mi>A</mi>
            <mi>B</mi>
        </mfrac>
        <mo>}</mo>
    </mrow>
    <mo>→</mo>
    <mi>X</mi>
</math>
