crates/math-core/tests/snapshots/wiki_test__wiki150.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\updownarrow\\big\\updownarrow\\Big\\updownarrow \\bigg\\updownarrow \\Bigg\\updownarrow \\dots \\Bigg\\Updownarrow \\bigg\\Updownarrow \\Big \\Updownarrow \\big\\Updownarrow \\Updownarrow"
---
<math>
    <mo stretchy="false" lspace="0">↕</mo>
    <mo maxsize="1.2em" minsize="1.2em" symmetric="true" lspace="0" rspace="0">↕</mo>
    <mo maxsize="1.623em" minsize="1.623em" symmetric="true" lspace="0" rspace="0">↕</mo>
    <mo maxsize="2.047em" minsize="2.047em" symmetric="true" lspace="0" rspace="0">↕</mo>
    <mo maxsize="2.470em" minsize="2.470em" symmetric="true" lspace="0" rspace="0">↕</mo>
    <mo>.</mo>
    <mo lspace="0" rspace="0.1667em">.</mo>
    <mo lspace="0">.</mo>
    <mo maxsize="2.470em" minsize="2.470em" symmetric="true" lspace="0" rspace="0">⇕</mo>
    <mo maxsize="2.047em" minsize="2.047em" symmetric="true" lspace="0" rspace="0">⇕</mo>
    <mo maxsize="1.623em" minsize="1.623em" symmetric="true" lspace="0" rspace="0">⇕</mo>
    <mo maxsize="1.2em" minsize="1.2em" symmetric="true" lspace="0" rspace="0">⇕</mo>
    <mo stretchy="false" rspace="0">⇕</mo>
</math>
