crates/math-core/tests/snapshots/wiki_test__wiki151.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\begin{bmatrix} 0 & \\cdots & 0 \\\\ \\vdots & \\ddots & \\vdots \\\\ 0 & \\cdots & 0 \\end{bmatrix}"
---
<math>
    <mrow>
        <mo>[</mo>
        <mtable displaystyle="false" scriptlevel="0">
            <mtr>
                <mtd>
                    <mn>0</mn>
                </mtd>
                <mtd>
                    <mo lspace="0.1667em" rspace="0">⋯</mo>
                </mtd>
                <mtd>
                    <mn>0</mn>
                </mtd>
            </mtr>
            <mtr>
                <mtd>
                    <mo lspace="0" rspace="0">⋮</mo>
                </mtd>
                <mtd>
                    <mo rspace="0">⋱</mo>
                </mtd>
                <mtd>
                    <mo rspace="0">⋮</mo>
                </mtd>
            </mtr>
            <mtr>
                <mtd>
                    <mn>0</mn>
                </mtd>
                <mtd>
                    <mo lspace="0.1667em" rspace="0">⋯</mo>
                </mtd>
                <mtd>
                    <mn>0</mn>
                </mtd>
            </mtr>
        </mtable>
        <mo>]</mo>
    </mrow>
</math>
