crates/math-core/tests/snapshots/wiki_test__wiki152.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\Alpha \\Beta \\Gamma \\Delta \\Epsilon \\Zeta \\Eta \\Theta"
---
<math>
    <mrow><mspace/><mi mathvariant="normal">Α</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Β</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Γ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Δ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Ε</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Ζ</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Η</mi></mrow>
    <mrow><mspace/><mi mathvariant="normal">Θ</mi></mrow>
</math>
